objects/AutoClearDataCustomSetting__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_API_Name_To_Clear_Out__c</fullName>
        <label>Field API Name To Clear Out</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOQL__c</fullName>
        <label>SOQL</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <customSettingsType>List</customSettingsType>
    <description>Used to clear out data values for records</description>
    <label>AutoClearDataCustomSetting</label>
</CustomObject>